fix container overflow

--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -7,6 +7,11 @@ html, body {
 .header-sub{
     height: 88px;
 }
+
+.off-canvas-content{
+    overflow: scroll;
+    height: 100vhs;
+}
 .main-content h2,
 #main-banner h3{
     font-weight: 600;
